<resources>
    <string name="app_name">CST2335FinalProject</string>
    <string name="Final_Project" translatable="false">Final Project</string>

    <string name="sunrise_sunset_lookup">Sunrise &amp; Sunset lookup</string>
    <string name="recipe_search" translatable="false">Recipe Search</string>
    <string name="dictionary_api" translatable="false">Dictionary API</string>
    <string name="deezer_song_search_api" translatable="false">Deezer song search api</string>
    <string name="Lookup">Lookup</string>
    

    <!-- Showcase title -->
    <string name="showCase">Sunrise &amp; Sunset Showcase</string>
    <string name="showDate">Date &amp; Time: </string>
    <string name="showSunrise">Sunrise time: </string>
    <string name="showSunset">Sunset time: </string>
    <string name="showLatitude">Latitude: </string>
    <string name="showLongitude">Longitude: </string>"

    <!-- Show case Resault -->
    <string name="resault_date_time">Date &amp; Time: %s</string>
    <string name="resault_sunrise">Sunrise: %s</string>
    <string name="resault_sunset">Sunset: %s</string>
    <string name="resault_latitude">Latitude: %s</string>
    <string name="resault_longitude">Longitude: %s</string>

    <!--Buttons -->
    <string name="lookUpButton">Lookup</string>
    <string name="favouriteButton">Favourite Location</string>
    <string name="saveLocationButton">Add to Favourite</string>
    <string name="deleteButton">Delete</string>

    <!-- Latitude, Longitude Format -->
    <string name="hintLatitude">* Latitude input with 5 digits.</string>
    <string name="hintLongitude">* Longitude input with 6 digits.</string>

    <!-- Latitude, Longitude Hint -->
    <string name="enterLongitude">Enter the longitude</string>
    <string name="enterLatitude">Enter the latitude</string>

    <!-- favourite_item -->
    <string name="favouriteList">Favourite Location List</string>
    <string name="tvDate">Current Date &amp; Time:  </string>
    <string name="tvSunrise"> %s </string>
    <string name="tvSunset"> %s </string>
    <string name="tvLatitude"> Latitude: </string>
    <string name="tvLongitude"> longitude: </string>


    <!-- Toast, Snackbar, AlertDialog -->
    <string name="invalidLatitude">Invalid Latitude, please enter again!</string>
    <string name="invalidLongitude">Invalid Longitude, please enter again!</string>
    <string name="locationAddedSuccessfully">Location Added Successfully!</string>
    <string name="deleteLocationAlert">Do you want to delete this location?</string>
    <string name="new_location_added">New location added!</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="sunHelp">This App is for check Sunrise and Sunset time. Follow the hint to enter Latitude and longitude. You will see the result in the showcase after click LOOKUP.</string>
    <string name="location" translatable="false">" "</string>


    <string name="error_msg">Please enter the name of a valid food</string>
    <string name="typeArtistName">type artist name</string>
    <string name="duration">Duration Detail</string>
    <string name="title">Title Detail</string>
    <string name="albumNameDetail">Album Name Detail</string>
    <string name="addFavorite">ADD FAVORITE</string>
    <string name="showFavorites">SHOW FAVORITES</string>
    <string name="deleteFavorite">DELETE FAVORITE</string>
    <string name="albumCover">Album cover</string>
    <string name="searchButton">SEARCH</string>
    <string name="OK">OK</string>
    <string name="help_title">Help</string>
    <string name="instructions">Instructions:Search artist for list of songs to see details or add to favorites.</string>
    <string name="itemClicked">Item clicked: </string>
    <string name="songAdded">Song added into favorites</string>
    <string name="songAlreadyExist">Song already in favorites</string>
    <string name="songDeleted">Song deleted from favorites</string>
    <string name="enterLettersOnly">Please enter letters only</string>
    <string name="validationPassed">Validation passed</string>
    <string name="validation">Validation</string>


</resources>
