<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".sunrisesunsetApi.FavouritePageActivity">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="148dp"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvDate"
            tools:layout_editor_absoluteX="115dp"
            tools:layout_editor_absoluteY="85dp" />

        <TextView
            android:id="@+id/tvSunrise"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvSunrise"
            app:layout_constraintStart_toStartOf="@+id/tvDate"
            app:layout_constraintTop_toBottomOf="@+id/tvDate" />

        <TextView
            android:id="@+id/tvSunset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvSunset"
            app:layout_constraintStart_toStartOf="@+id/tvSunrise"
            app:layout_constraintTop_toBottomOf="@+id/tvSunrise" />

        <TextView
            android:id="@+id/tvLatitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvLatitude"
            app:layout_constraintStart_toStartOf="@+id/tvSunset"
            app:layout_constraintTop_toBottomOf="@+id/tvSunset" />

        <TextView
            android:id="@+id/tvLongitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvLongitude"
            app:layout_constraintStart_toStartOf="@+id/tvLatitude"
            app:layout_constraintTop_toBottomOf="@+id/tvLatitude" />

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="69dp"
        android:layout_height="68dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/linearLayout2"
        app:srcCompat="@drawable/sun" />

</androidx.constraintlayout.widget.ConstraintLayout>